[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ScanStrike"
version = "0.2.0"
description = "A Zenmap-style Nmap GUI with automatic XML parsing and triage notes"
readme = "README.md"
authors = [{name = "Austin Wilson"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.6",
]
keywords = ["nmap", "kali", "security", "gui", "recon"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Environment :: X11 Applications :: Qt",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Topic :: Security",
]

[project.scripts]
reconmap = "reconmap.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
